fix padding on mobile

--- a/themes/mrc/assets/css/index.css
+++ b/themes/mrc/assets/css/index.css
@@ -2863,6 +2863,9 @@
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
